--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -98,6 +98,8 @@
   }
 
   .about p {
+    max-width: 290px;
+    margin: 0 auto;
     margin-bottom: 129px;
     padding: 0 16px;
     font-size: 16px;
