--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -91,13 +91,9 @@
   position: relative;
   width: 56.5%;
   bottom: 65px;
-  left: 419px;
+  left: 404px;
   display: flex;
   justify-content: space-between;
-}
-
-.reviews__counter-buttons-wrapper {
-  display: flex;
 }
 
 .reviews__content-wrapper {
@@ -169,9 +165,9 @@
   }
 }
 
-.reviews__page-counter {
+.swiper-pagination.reviews__counter-buttons-wrapper {
+  text-align: left;
   margin: 0;
-  margin-right: 23px;
   padding: 0;
   font-family: "Fira Sans", "Arial", sans-serif;
   font-size: 17px;
@@ -182,8 +178,8 @@
 
 .reviews__arrows-wrapper {
   position: relative;
-  left: 451px;
-  bottom: 40px;
+  left: 47px;
+  bottom: -25px;
   width: 64px;
 }
 
@@ -192,6 +188,7 @@
   position: absolute;
   width: 15px;
   height: 30px;
+  z-index: 100;
 
   &:hover {
     opacity: 0.7;
@@ -226,6 +223,7 @@
   flex-direction: row;
   justify-content: space-between;
   min-width: 104px;
+  z-index: 10;
 }
 
 .reviews__social-list a {
@@ -271,15 +269,15 @@
   }
 
   .reviews__arrows-wrapper {
-    left: 194px;
-    bottom: 12px;
+    left: 48px;
+    bottom: -27px;
   }
 
   .reviews__footer-wrapper {
     width: 70%;
     position: absolute;
-    left: 175px;
-    bottom: 99px;
+    left: 136px;
+    bottom: 0;
   }
 }
 
@@ -321,6 +319,7 @@
 
   .reviews__item {
     flex-direction: column;
+    margin-bottom: 0;
   }
 
   .reviews__content-wrapper {
@@ -382,23 +381,30 @@
   }
 
   .reviews__footer-wrapper {
-    position: static;
+    position: relative;
     text-align: left;
-    top: 0;
-    left: -3px;
+    width: 100%;
+    bottom: 0;
+    left: 15px;
+  }
+
+  .reviews__pagination-wrapper {
+    position: relative;
+    bottom: 638px;
+    left: -50%;
   }
 
   .reviews__counter-buttons-wrapper {
-    position: absolute;
-    top: 432px;
-    transform: translateX(-47%);
-    left: 43.6%;
+    position: relative;
+    left: 0;
+    top: 0;
   }
 
   .reviews__arrows-wrapper {
-    left: 50%;
-    transform: translateX(50%);
-    top: -673px;
+    position: relative;
+    left: 87px;
+    top: 25px;
+    bottom: 0;
   }
 
   .reviews .swiper-button-next {
@@ -414,6 +420,6 @@
   .reviews__social-list {
     position: relative;
     max-width: 290px;
-    left: -3px;
+    order: -10;
   }
 }
