--- a/source/sass/blocks/masa-photo.scss
+++ b/source/sass/blocks/masa-photo.scss
@@ -137,8 +137,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 16px;
+    margin: 0 auto;
     padding-left: 77px;
+    max-width: 143px;
   }
 
   .masa-photo__icon-insta {
