--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -419,6 +419,7 @@
 
   .reviews__social-list {
     position: relative;
+    transform: translateX(-18px);
     max-width: 290px;
     order: -10;
   }
